--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.5.0",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
-        "@fortawesome/free-solid-svg-icons": "^5.13.0"
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
+        "vue-router": "^3.3.4"
     }
 }
